--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -38,3 +38,22 @@ h4 {
 h3, h2, h1 {
 	font-family: 'Hanna';
 }
+
+.vertical-alignment-helper {
+	display: table;
+	width: 100%;
+	height: 100%;
+	pointer-events: none;
+}
+
+.vertical-align-center {
+	display: table-cell;
+	vertical-align: middle;
+	pointer-events: none;
+}
+
+.modal-content {
+	width: inherit;
+	height: inherit;
+	margin: 0 auto;
+}
